corrected model-genre-group spacing and sizing

--- a/src/components/GenreList.css
+++ b/src/components/GenreList.css
@@ -1,7 +1,8 @@
 
 .modal-genre-group li {
-    width: 225px;
+    width: 155px;
     height: 100%;
+    margin: auto;
     border: 2px solid white;
     list-style: none;
     margin-top: 1.5rem;
